asg/tests/pass/integers/i32/min.leo
function main() {
    const a: i32 = -2147483648;
}