asg/tests/fail/integers/i8/negate_min.leo
function main() {
    const a = -128i8;
    const b = -a;
}